# gmail-stats

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
demo/: app.css  app.js  build_demo.py  dataset_spec.json  generate_summary.py  index.html  summary.json
src/: ingest.rs  lib.rs  main.rs  mbox.rs  webapp.rs
tests/: web_mutating.rs
tests/frontend/: harness.py  test_driver.js
web/: app.css  app.js  index.html
