[package]
name = "gmail_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.8"
futures = "0.3"
google-gmail1 = "7.0"
lazy_static = "1.5"
regex = "1.13"
# Kernel flock() for the cross-process ingest lock: safe wrappers (no unsafe in
# this crate), tiny with only the fs feature enabled. Unix-only, by design.
rustix = { version = "1.0", features = ["fs"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.53", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
yup-oauth2 = "12"

[dev-dependencies]
tempfile = "3"
