[package]
name = "gmail_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.8"
futures = "0.3"
# CSPRNG for the viewer's per-process CSRF token (already in the tree
# transitively via the TLS stack; this only makes it a direct dependency).
getrandom = "0.4"
google-gmail1 = "7.0"
lazy_static = "1.5"
regex = "1.13"
# Kernel flock() for the cross-process ingest lock plus kill() for the
# viewer's owned-child cancel path: safe wrappers (no unsafe in this crate).
# Unix-only, by design.
rustix = { version = "1.0", features = ["fs", "process"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.53", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
yup-oauth2 = "12"

[dev-dependencies]
tempfile = "3"
# tower::ServiceExt::oneshot for exercising the axum router in endpoint tests.
tower = { version = "0.5", features = ["util"] }
